Fix for menu overlay z-index issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,6 +29,7 @@ $color-white: #fff;
   top: 1em;
   left: 1em;
   position: fixed;
+  z-index:99999;
 }
 #trigger-overlay {
   top: 2em;
